--- a/css/style.css
+++ b/css/style.css
@@ -113,18 +113,6 @@ section.about p{
 section.about .social{
     display: flex;
 }
-/* section.about .social a{
-    background: var(--dark);
-    color: var(--dark);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    margin-right: 0.6rem;
-    transition: all .3s ease;
-} */
 section.about .social .button .icon{
     background: var(--light);
     color: var(--dark);
@@ -149,9 +137,6 @@ section.about .social .button .icon:hover{
     color: var(--primary);
 }
 
-/* section.about .social a:hover{
-    background: var(--primary); */
-}
 section.about .social a img{
     height: 100%;
     width: 100%;
@@ -170,10 +155,66 @@ section.about .social a img{
     margin-bottom: 1rem;
     text-align: center;
 }
-section.container .card-wrapper{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
+
 section.services{
     background: var(--light);
+}
+section.services .card-wrapper{
+    display: grid;
+    grid-template-columns: repeat(3 , 1fr);
+    column-gap: 2rem;
+    row-gap: 6rem;
+}
+.section-heading{
+    color: var(--secondary);
+    text-align: center;
+}
+.section-heading span{
+    color: var(--primary);
+}
+.section-heading + p{
+    color: var(--ternary);
+    font-family: 'Lato',sans-serif;
+    margin-bottom: 8rem;
+    text-align: center;
+}
+   
+section.services .card-wrapper img{
+    background: var(--primary);
+    width: 6rem;
+    height: 6rem;
+    /* border: 1rem solid var(--dark); */
+    border: 1.5rem solid var(--primary);
+    /* border-radius: 3rem; */
+    position: absolute;
+    top: -3rem;
+    left: 50%;
+    transform: translateX(-50%);
+    /* transition: translateX(50); */
+}
+section.services .card-wrapper .card{
+    background: var(--pure);
+    padding: 3rem 2rem;
+    position: relative;
+    padding-top: 5rem;
+    text-align: center;
+    transition: all .3s ease;
+}
+section.services .card-wrapper .card:hover{
+    background:var(--dark);
+    transition: all .3s ease;
+}
+section.services .card-wrapper .card:hover h2,section.services .card-wrapper .card:hover p{
+    color: var(--light);
+}
+
+section.services .card-wrapper .card h2{
+    font-weight: 400;
+    font-size:1.2rem;
+    margin-bottom:0.5rem;
+}
+section.services .card-wrapper .card p{
+    font-family: 'Lato',sans-serif;
+    color: var(--ternary);
+    line-height: 1.6;
 }
