--- a/css/style.css
+++ b/css/style.css
@@ -218,3 +218,107 @@ section.services .card-wrapper .card p{
     color: var(--ternary);
     line-height: 1.6;
 }
+section.freelancer{
+    text-align:center;
+    background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../images/camera.png);
+    color: var(--pure);
+    clip-path: polygon(0 0, 100% 0,100% 100%, 77% 80%, 0 100%);
+    padding-bottom: 14rem;
+}
+section.freelancer h1{
+    font-size:2rem;
+    margin-bottom:0.5rem;
+}
+section.freelancer p{
+    margin-bottom: 2rem;
+    font-family: 'Lato',sans-serif;
+}
+section.reviews{
+text-align: center;
+}
+section.reviews .slider .slide img{
+    width: 130px;
+    height: 130px;
+    border-radius:50%;
+    object-fit: cover;
+    margin-bottom: 2rem;
+} 
+section.reviews .slider .slide{
+    text-align:center;
+    display:flex;
+    align-items: center;
+    flex-direction:column;
+    padding: 0 30rem;
+}
+section.reviews .slider .slide p{
+    font-family: 'Lato',sans-serif;
+    color: var(--ternary);
+    margin-bottom: 1rem;
+}
+section.reviews .slider .slide span{
+    font-size: 0.8rem;
+}
+section.reviews .slider-dots .dots{
+    list-style-type: none;
+    display: flex!important;
+    justify-content: center;
+}
+section.reviews .slider-dots{
+    margin-top: 3rem;
+}
+section.reviews .slider-dots button{
+    font-size :0;
+    width: 8px;
+    height:5px;
+    margin-right: 0.3rem;
+    border: none;
+    outline:none;
+    background:var(--ternary);
+    border-radius:50px;
+    cursor: pointer;
+}
+section.reviews .slider-dots .dots li.slick-active button{
+    background:var(--primary);
+    width: 20px;
+}
+
+section.projects{
+    background: var(--light);
+}
+section.projects .card-wrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap:2rem;
+    row-gap: 2rem; 
+}
+section.projects .card-wrapper .card{
+    position: relative;
+    height:250px;
+}
+section.projects .card-wrapper .card .overlay{
+    position: absolute;
+    top :0px;
+    left:0px;
+    width:100%;
+    height:100%;
+    background:rgba(61,207,211,0.9);
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    flex-direction: column;
+    color:var(--light);
+    opacity: 0;
+    transition :all .3s ease;
+}
+section.projects .card-wrapper .card .overlay a{
+    color:var(--secondary);
+    text-decoration: none;
+}
+section.projects .card-wrapper .card img{
+    height:100%;
+    width:100%;
+    object-fit: cover;
+}
+section.projects .card-wrapper .card:hover .overlay{
+    opacity:1;
+}
