Made changes in css to make it RESPONSive
changes in css and js

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 *{
     padding:0;
     margin:0;
@@ -29,6 +33,27 @@ header{
     max-width: 1152px;
     padding : 0 15px; 
     margin : 0 auto;
+}
+
+@media (min-width:576px){
+    .container{
+        max-width: 540px;
+    }
+}
+@media (min-width:768px){
+    .container{
+        max-width: 720px;
+    }
+}
+@media (min-width:992px){
+    .container{
+        max-width: 960px;
+    }
+}
+@media (min-width:1200px){
+    .container{
+        max-width: 1152px;
+    }
 }
 
 header nav .left a{
@@ -321,4 +346,295 @@ section.projects .card-wrapper .card img{
 }
 section.projects .card-wrapper .card:hover .overlay{
     opacity:1;
+}
+section.blog{
+    background: var(--dark);
+    clip-path: polygon(0 0, 100% 0,100% 100%, 67% 90%, 0 100%);
+    padding-bottom: 12rem;
+}
+section.blog .section-heading{
+    color: var(--pure);
+}
+section.blog .card-wrapper{
+    display: grid;
+    grid-template-columns: repeat(3 , 1fr);
+    column-gap:3rem;
+}
+section.blog .card-wrapper .card{
+    background:var(--pure);
+}
+section.blog .card-wrapper .card .img-wrapper img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
+}
+section.blog .card-wrapper .card-content{
+    padding:1rem;
+    padding-left: 2rem;
+    padding-right:2rem;
+}
+section.blog .card-wrapper .card-content h1{
+    font-size: 1rem;
+    font-weight: 600;
+    
+}
+section.blog .card-wrapper .card-content a{
+    color: var(--secondary);
+    text-decoration: none;
+    transition: all .3s ease;
+}
+section.blog .card-wrapper .card-content a:hover{
+    color: var(--primary);
+}
+section.blog .card-wrapper .card-content span{
+    color: var(--ternary);
+    font-size:0.8rem;
+}
+section.blog .card-wrapper .card-content p{
+    font-family: 'Lato' ,sans-serif;
+    color: var(--ternary);
+    margin-top: 1rem;
+    margin-bottom :1rem;
+}
+section.blog .card-wrapper .card-content a.read-more{
+    font-size:0.8rem;
+}
+section.contact .card-wrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 5rem;
+}
+section.contact .card-wrapper .card{
+    text-align: center;
+}
+section.contact .card-wrapper .card img{
+    margin-bottom: 5rem;
+}
+section.contact .card-wrapper .card h1{
+    font-weight: 400;
+    margin-bottom: 1rem;
+    font-family: 'Poppins',sans-serif;
+}
+section.contact .card-wrapper .card h6{
+    font-size: 1rem;
+    color:var(--ternary);
+    font-weight: 400;
+    margin-bottom: 4rem;
+}
+
+section.contact .input-wrap{
+    display:grid;
+    grid-template-columns: repeat(2,1fr);
+    column-gap: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    
+}
+section.contact .input-wrap-2{
+    display:flex;
+    flex-direction: column;
+    margin-bottom: 2rem;
+    
+}
+section.contact input{
+    padding: 0.5rem;
+    border: 1px solid var(--light);
+}
+section.contact input:focus{
+    outline:none;
+}
+section.contact .input-wrap-2 input{
+    margin-bottom: 2rem;
+}
+section.contact .input-wrap-2 textarea{
+    padding:1rem;
+    border: 1px solid var(--light);
+}
+section.contact .input-wrap-2 textarea{
+    outline:none;
+}
+section.contact .btn-wrap{
+    text-align: center;
+}
+footer{
+    background: var(--dark);
+    text-align: center;
+    padding: 5rem;
+}
+footer .footer-logo{
+    margin-bottom: 3rem;
+}
+footer .footer-social{
+    margin-bottom: 3rem;
+}
+footer .footer-social a{
+    margin-right: 1rem;
+}
+footer .footer-social a i{
+    font-size: 1.5rem;
+}
+footer .copyright{
+    color: var(--ternary);
+    margin-top:2rem;
+}
+
+.site-main-wrapper{
+    position: relative;
+}
+.hamburger{
+    position: absolute;
+    top:40px;
+    right:40px;
+    z-index: 11;
+    background: none;
+    border: none;
+    outline:none;
+    cursor: pointer;
+    display:none;
+}
+.hamburger img{
+    width:30px;
+}
+.mobile-nav{
+    position:fixed;
+    top:0;
+    left:0;
+    z-index: 1001;
+    background:var(--light);
+    width:100%;
+    height:100%;
+    padding:2rem;
+    padding-top: 5rem;
+    transform: translateX(-100%);
+    transition: all .5s ease-in-out;
+}
+.open{
+    transform: translateX(0);
+}
+.times{
+    position:fixed;
+    top:30px;
+    right:30px;
+    border:none;
+    background: none;
+    outline:none;
+    cursor: pointer;
+}
+.times img{
+    width:30px;
+}
+.mobile-nav ul{
+    list-style-type: none;
+}
+.mobile-nav ul li a{
+    color: var(--secondary);
+    text-decoration:none;
+    font-size: 2rem;
+}
+.mobile-nav .nav-logo{
+    color: var(--dark);
+    background:var(--dark);
+    width:12rem;
+    padding:0.5rem;
+}
+
+@media (max-width:1024px){
+    header #main-nav{
+        display:none;
+    }    
+    .hamburger{
+        display: block;
+    }
+    .hero .left img{
+        width:260px;
+    }
+    .hero .right h1{
+        font-size: 3rem;
+    }
+    .hero {
+        padding-top: 10rem;
+    }
+    header {
+        clip-path: polygon(0 0, 100% 0,100% 100%, 26% 91%, 0 100%);
+    }
+    section.about .about-me-img {
+        height: 360px;
+    }
+    section.services .card-wrapper{
+        grid-template-columns: repeat(2 , 1fr);
+    }
+    section.projects .card-wrapper{
+        grid-template-columns: repeat(2,1fr);
+    }
+    section.blog .card-wrapper{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    section.blog{
+        clip-path: polygon(0 0, 100% 0,100% 100%, 67% 97%, 0 100%);
+    }
+}
+
+@media (max-width:576px){
+    .hero{
+        flex-direction: column;
+    }
+    header {
+        clip-path: polygon(0 0, 100% 0,100% 100%, 69% 97%, 0 100%);
+    }
+    .hero .right{
+        position:absolute;
+        top:260px;
+        padding: 0 1rem;
+        background: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.9));
+    }
+    .hero .left{
+        margin-top:-5rem;
+        margin-right: -10rem;
+        padding-bottom: 5rem;
+    }
+    .about .container{
+        flex-direction: column;
+    }
+    .about .right{
+        text-align: center;
+        margin-top: 2rem;
+    }
+    .about .right .social{
+        justify-content: center;
+    }
+    section{
+        padding: 4rem 0;
+    }
+    section.services .card-wrapper{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    section.freelancer h1{
+        line-height: 2.5rem;
+    }
+    section.freelancer{
+        clip-path: polygon(0 0, 100% 0,100% 100%, 66% 88%, 0 100%);
+        padding-bottom: 7rem;
+    }
+    section.reviews .slider .slide{
+        padding: 0 0rem;
+    }
+    section.projects .card-wrapper{
+        grid-template-columns:repeat(1,1fr);
+    }
+    .section-heading + p{
+        margin-bottom: 6rem;
+    }
+    .blog .card-wrapper{
+        row-gap: 2rem;
+    }
+    section.blog{
+        padding-bottom: 7rem;
+    }
+    section.contact .card-wrapper{
+        grid-template-columns: repeat(1,1fr);
+    }
+    section.contact .input-wrap{
+        grid-template-columns: repeat(1,1fr);
+        row-gap: 2rem;
+    }
 }
